PCNL SSC-SYSTEM
Version 1.0.1

--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
   <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase-firestore.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.js"></script>
+  <link href="css/offline-theme-dark.css" rel="stylesheet">
+
+  <link href="css/offline-language-english.css" rel="stylesheet">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <script src="js/jquery.countdown.js"></script>
