--- a/login.html
+++ b/login.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
   <link href="css/style.css" rel="stylesheet">
   <script src="http://cdn.ckeditor.com/4.6.1/standard/ckeditor.js"></script>
+  <link href="css/offline-theme-dark.css" rel="stylesheet">
+
+  <link href="css/offline-language-english.css" rel="stylesheet">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.min.css">
 </head>
 
@@ -138,7 +142,7 @@
   <script src="js/jquery.preloaders.js"></script>
   <script src="js/login.js"></script>
   <script src="js/offline.js"></script>
-  
+
 </body>
 
 </html>
