--- a/voters.html
+++ b/voters.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+    <link href="css/offline-theme-dark.css" rel="stylesheet">
+
+    <link href="css/offline-language-english.css" rel="stylesheet">
 
   </head>
   <body>
@@ -162,6 +165,6 @@
     <script src="js/checkonline.js"></script>
     <script src="js/checkoffline.js"></script>
     <script src="js/offline.js"></script>
-    
+
   </body>
 </html>
