Missing css link
+Added missing css link.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <link href="css/style.css" rel="stylesheet">
   <script src="http://cdn.ckeditor.com/4.6.1/standard/ckeditor.js"></script>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+  <link href="css/offline-theme-dark.css" rel="stylesheet">
 
+  <link href="css/offline-language-english.css" rel="stylesheet">
 </head>
 
 <body>
