--- a/course.html
+++ b/course.html
@@ -37,7 +37,8 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a id="name" href="#">Administrator</a></li>
+          <li><a id="contact" href="#">Contact</a></li>
+          <li><a id="name" href="database.html">Administrator</a></li>
           <li><a href="#" id="logout">Logout</a></li>
         </ul>
       </div>
@@ -59,7 +60,7 @@
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="index.html">Dashboard</a></li>
-              <li><a href="pages.html">Winner</a></li>
+              <li><a href="winner.html">Winner</a></li>
               <li><a href="partylist.html">Party List</a></li>
               <li><a href="candidates.html">Candidates</a></li>
               <li><a href="position.html">Position</a></li>
@@ -88,7 +89,7 @@
                     <input type="text" class="form-control" id="add-course">
                   </div>
               <button type="button" class="btn" id="btn-addCourse">Submit</button>
-              <button type="button" class="btn" id="clear">Clear</button>
+              <button type="button" class="btn" id="clear">Cancel</button>
               <div class="form-group">
                 <hr>
                 <table id="course-table" class="table table-striped table-hover" >
