--- a/partylist.html
+++ b/partylist.html
@@ -37,7 +37,8 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a id="name" href="#">Administrator</a></li>
+          <li><a id="contact" href="#">Contact</a></li>
+          <li><a id="name" href="database.html">Administrator</a></li>
           <li><a href="#" id="logout">Logout</a></li>
         </ul>
       </div>
@@ -59,7 +60,7 @@
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="index.html">Dashboard</a></li>
-              <li><a href="pages.html">Winner</a></li>
+              <li><a href="winner.html">Winner</a></li>
               <li><a href="partylist.html">Party List</a></li>
               <li><a href="candidates.html">Candidates</a></li>
               <li><a href="position.html">Position</a></li>
@@ -93,7 +94,7 @@
                     <textarea class="form-control" rows="5" id="description"></textarea>
                   </div>
               <button type="button" class="btn" id="btn-partylist">Submit</button>
-              <button type="button" class="btn" id="clear">Clear</button>
+              <button type="button" class="btn" id="clear">Cancel</button>
 
               <div class="form-group">
                 <hr>
