--- a/winner.html
+++ b/winner.html
@@ -39,7 +39,8 @@
       </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="name" href="#">Administrator</a></li>
+        <li><a id="contact" href="#">Contact</a></li>
+        <li><a id="name" href="database.html">Administrator</a></li>
         <li><a href="#" id="logout">Logout</a></li>
       </ul>
     </div>
