--- a/candidates.html
+++ b/candidates.html
@@ -35,11 +35,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="#">PCNL SSC <strong>Admin Panel</strong></a>
+        <a class="navbar-brand" disabled>PCNL SSC <strong>Admin Panel</strong></a>
       </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="name" href="#">Administrator</a></li>
+        <li><a id="contact" href="#">Contact</a></li>
+        <li><a id="name" href="database.html">Administrator</a></li>
         <li><a href="#" id="logout">Logout</a></li>
       </ul>
     </div>
@@ -74,7 +75,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Dashboard</a></li>
-            <li><a href="pages.html">Winner</a></li>
+            <li><a href="winner.html">Winner</a></li>
             <li><a href="partylist.html">Party List</a></li>
             <li><a href="candidates.html">Candidates</a></li>
             <li><a href="position.html">Position</a></li>
@@ -117,11 +118,12 @@
                 </select>
               <label for="par">Partylist:</label>
               <select id="par">
+                <option value="independent">independent</option>
                 </select>
             </div>
 
             <button type="button" class="btn" id="upload" onclick="up()">Submit</button>
-            <button type="button" class="btn" id="clear">Clear</button>
+            <button type="button" class="btn" id="clear">Cancel</button>
           </div>
 
           <!-- <div class="well">
