--- a/database.html
+++ b/database.html
@@ -35,11 +35,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="#">PCNL SSC</a>
+        <a class="navbar-brand" disabled>PCNL SSC <strong>Admin Panel</strong></a>
       </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="name" href="#">Administrator</a></li>
+        <li><a id="contact" href="#">Contact</a></li>
+        <li><a id="name" href="database.html">Administrator</a></li>
         <li><a href="#" id="logout">Logout</a></li>
       </ul>
     </div>
@@ -51,19 +52,7 @@
         <div class="col-md-10">
           <h1><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Database <small>Manage Database Records</small></h1>
         </div>
-        <!-- <div class="col-md-2">
-            <div class="dropdown create">
-              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Create Content
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a type="button" data-toggle="modal" data-target="#addPage">Add Page</a></li>
-                <li><a href="#">Add Post</a></li>
-                <li><a href="#">Add User</a></li>
-              </ul>
-            </div>
-          </div> -->
+
       </div>
     </div>
   </header>
@@ -169,6 +158,25 @@
           <div class="col-md-6">
             <div id="faq1" role="tablist" aria-multiselectable="true">
               <div class="panel panel-default">
+                <div class="panel-heading main-color-bg" id="tabb4">
+                  <h3 class="panel-title"><a data-toggle="collapse" data-parent="#faq1" href="#create" aria-expanded="true" aria-controls="create">
+                Create New Database
+                </a></h3>
+                </div>
+                <div id="create" class="panel-collapse collapse" role="tabpanel" aria-labelledby="tabb4">
+                  <div class="panel-body">
+                    <form action="index.html" class="well" onsubmit="return false;" novalidate>
+                      <div class="form-group">
+                        <label>Enter database name:</label>
+                        <input type="text" class="form-control"  required="required" placeholder="Database name" id="dbname1">
+                      </div>
+
+                      <button id="btn-createdb" type="submit" class="btn btn-default btn-block" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Saving...">Submit</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
                 <div class="panel-heading main-color-bg" id="tabb1">
                   <h3 class="panel-title"><a data-toggle="collapse" data-parent="#faq1" href="#sd" aria-expanded="true" aria-controls="sd">
                 Save Current Election
@@ -227,6 +235,7 @@
                   </div>
                 </div>
               </div>
+
               </div>
 
             </div>
@@ -252,7 +261,7 @@
   <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
   <script src="js/index.js"></script>
-  <script src="js/confcourse.js"></script>
+  <!-- <script src="js/confcourse.js"></script> -->
   <script src="js/removeToastr.js"></script>
   <script src="js/checkonline.js"></script>
   <script src="js/checkoffline.js"></script>
