--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
   <link href="css/style.css" rel="stylesheet">
-  <script src="http://cdn.ckeditor.com/4.6.1/standard/ckeditor.js"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
   <link href="css/offline-theme-dark.css" rel="stylesheet">
 
   <link href="css/offline-language-english.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -38,7 +39,8 @@
       </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="name" href="#">Administrator</a></li>
+        <li><a id="contact" href="#">Contact</a></li>
+        <li><a id="name" href="database.html">Administrator</a></li>
         <li><a href="#" id="logout">Logout</a></li>
       </ul>
     </div>
@@ -92,6 +94,9 @@
             <a href="student.html" class="list-group-item"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Students <span class="badge" id="stu"></span></a>
             <a href="course.html" class="list-group-item"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Courses <span class="badge" id="cc"></span></a>
             <a href="candidates.html" class="list-group-item"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Candidates <span class="badge" id="cand"></span></a>
+            <a href="candidates.html" class="list-group-item"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Total Voters <span class="badge" id="tv"></span></a>
+            <a href="candidates.html" class="list-group-item"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Not Voted <span class="badge" id="nv"></span></a>
+            <a href="candidates.html" class="list-group-item"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Voted <span class="badge" id="v"></span></a>
           </div>
 <!--
           <div class="well">
@@ -130,18 +135,20 @@
             </div>
             <div class="panel-body">
               <div class="form-group">
-                <label for="tftime">Enter voting expiration day:(yy/mm/dd hh:mm)</label>
-                <input type="text" class="form-control" id="tftime">
+                <label for="tftime">Enter voting expiration day:(mm/dd/yyyy)</label>
+                <input type="text" id="tftime">
                 <div id="time"></div>
                 <button type="button" class="btn" id="btn-time">Submit</button>
+                </div>
               <div class="form-group">
                 <label for="penalty">Enter penalty for not casting a vote:</label>
                 <input type="text" class="form-control" id="penalty">
                 <div id="pena"></div>
+                <button type="button" class="btn" id="btn-pen">Submit</button>
               </div>
-              <button type="button" class="btn" id="btn-pen">Submit</button>
 
-              </div>
+
+
             </div>
           </div>
         </div>
@@ -175,6 +182,7 @@
   <script src="js/jquery.preloaders.js"></script>
 
   <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="js/index.js"></script>
   <script src="js/removeToastr.js"></script>
   <script src="js/checkonline.js"></script>
