--- a/student.html
+++ b/student.html
@@ -37,7 +37,8 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a id="name" href="#">Administrator</a></li>
+          <li><a id="contact" href="#">Contact</a></li>
+          <li><a id="name" href="database.html">Administrator</a></li>
           <li><a href="#" id="logout">Logout</a></li>
         </ul>
       </div>
@@ -72,7 +73,7 @@
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="index.html">Dashboard</a></li>
-              <li><a href="pages.html">Winner</a></li>
+              <li><a href="winner.html">Winner</a></li>
               <li><a href="partylist.html">Party List</a></li>
               <li><a href="candidates.html">Candidates</a></li>
               <li><a href="position.html">Position</a></li>
@@ -104,6 +105,10 @@
                 <input type="text" class="form-control" id="fname">
               </div>
               <div class="form-group">
+                <label for="fname">Middle Name:</label>
+                <input type="text" class="form-control" id="fname">
+              </div>
+              <div class="form-group">
                 <label for="lname">Last Name:</label>
                 <input type="text" class="form-control" id="lname">
               </div>
@@ -121,7 +126,7 @@
                 </select>
               </div>
               <button type="button" class="btn" id="submit">Submit</button>
-              <button type="button" class="btn" id="clear">Clear</button>
+              <button type="button" class="btn" id="clear">Cancel</button>
             </div>
 
             <!-- <div class="well">
