--- a/voters.html
+++ b/voters.html
@@ -36,7 +36,8 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a id="name" href="#">Administrator</a></li>
+          <li><a id="contact" href="#">Contact</a></li>
+          <li><a id="name" href="database.html">Administrator</a></li>
           <li><a href="#" id="logout">Logout</a></li>
         </ul>
       </div>
@@ -58,7 +59,7 @@
           <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Dashboard</a></li>
-            <li><a href="pages.html">Winner</a></li>
+            <li><a href="winner.html">Winner</a></li>
             <li><a href="partylist.html">Party List</a></li>
             <li><a href="candidates.html">Candidates</a></li>
             <li><a href="position.html">Position</a></li>
@@ -126,6 +127,7 @@
                               <th>Last Name</th>
                               <th>Course</th>
                               <th>Status</th>
+                              <th></th>
                           </tr>
                       </thead>
                       <tbody>
